# DeviceFlowSSH

./: .gitignore  CMakeLists.txt  qr.c
config/: pam_authSSHviaOKTA.conf
src/: deviceflow.c  qr.c
